<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    tools:context="com.example.android.justjava2.MainActivity">

    <EditText
        android:id="@+id/nome_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textCapWords"
        android:hint="@string/name_field" />

    <TextView
        android:layout_marginBottom="16dp"
        android:text="@string/toppings_title"
        style="@style/HeaderTextStyle" />

    <CheckBox
        android:id="@+id/chantilly_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="24dp"
        android:text="@string/toppings_1"
        android:textSize="16sp" />
    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="24dp"
        android:text="@string/toppings_2"
        android:textSize="16sp" />

    <TextView

        android:layout_marginBottom="16dp"
        android:text="@string/quantity_title"
        style="@style/HeaderTextStyle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:onClick="decrement"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:onClick="increment"
            android:text="+" />

    </LinearLayout>

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:text="Order Summary"-->
        <!--android:textAllCaps="true"-->
        <!--android:textColor="@android:color/darker_gray"-->
        <!--android:textSize="16sp" />-->
    <!--<TextView-->
        <!--android:id="@+id/order_Summary_text_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingBottom="16dp"-->
        <!--android:text=""-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textSize="16sp" />-->

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:text="@string/order_button" />

</LinearLayout>
</ScrollView>